feat: add OG image for social sharing
- Create og-image.jpg (1200x630) from hero background
- Update meta tags with absolute URLs for proper sharing
- Add twitter:image meta tag

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
+    <meta property="og:url" content="https://funil.somosintegros.com.br">
     <meta property="og:title" content="O Problema Não É O Seu Funil">
     <meta property="og:description" content="Descubra por que o problema nunca foi o seu funil. Metodologia testada em dezenas de negócios.">
-    <meta property="og:image" content="/img/og-image.jpg">
+    <meta property="og:image" content="https://funil.somosintegros.com.br/img/og-image.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="O Problema Não É O Seu Funil">
     <meta name="twitter:description" content="Descubra por que o problema nunca foi o seu funil. Metodologia testada em dezenas de negócios.">
+    <meta name="twitter:image" content="https://funil.somosintegros.com.br/img/og-image.jpg">
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
