--- a/index.html
+++ b/index.html
@@ -200,5 +200,8 @@
 
 <script src="js/main.js"></script>
 
+<!-- Vercel Analytics -->
+<script defer src="/_vercel/insights/script.js"></script>
+
 </body>
 </html>
