add footer credits and tagline

--- a/index.html
+++ b/index.html
@@ -233,7 +233,11 @@
     </div>
   </div>
 
-  <footer><img src="img/assinatura.png" alt="Íntegros" class="footer-logo"></footer>
+  <footer>
+    <img src="img/assinatura.png" alt="Íntegros" class="footer-logo">
+    <p class="footer-tagline">propósito, seriedade e integridade</p>
+    <p class="footer-credits">feito com ☕ por Kevin Eger · todos os direitos reservados</p>
+  </footer>
 
 
   <script src="js/main.js"></script>
